# optimusprime

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install-remote.sh  install.ps1  install.sh  optimusprime.plugin  pyproject.toml  pytest.ini
.claude-plugin/: marketplace.json  plugin.json
.optimusprime/: attempts.md  codebase-map.json  compression-log.json  conductor-plan.md  conductor-session.json  contract.json  decisions.md  events.jsonl  loop-state.json  patterns.json  resume.json  scope-guard-log.json  self-model.json  session-snapshot.md  session-state.json
benchmarks/: benchmark_suite.py  demo_big_sample.py
cli/: op.py
cli/commands/: __init__.py
commands/: op-autopilot.md  op-conductor.md  op-contract.md  op-decisions.md  op-intel.md  op-replay.md  op-snapshot.md  op-watch.md
ecosystem/: activator.py  installer.py  registry.json  registry_mirror.py  updater.py
hooks/: hooks.json  optimusprime-statusline.ps1  optimusprime-statusline.sh
hooks/post/: attempt-logger.py  done-checker.py  learner-hook.py  output-compressor.py  post-write-analyzer.py  session-logger.py  task-state-updater.py  (+1 more)
mcp/: search.py  server.py
menubar/: optimusprime_menubar.py  optimusprime_tray.py
schema/: patterns-schema.json  protocol.md
tests/: conftest.py  test_autobots_naming.py  test_codebase_map.py  test_conductor.py  test_convention_extractor.py  test_install.py  test_intelligence.py  test_learner.py  test_menubar.py  test_plugin_commands.py  test_quality_checks.py  test_self_model.py  test_statusline.py  test_token_counter.py  test_token_reduction.py
(+80 files in other folders)
